--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ subjects:
 - !lcsh 'United States -- History'
 - !lcc 'E151'
 - !lcsh 'United States -- Politics and government'
+- GITenberg
 title: 'American Eloquence, an Index of the Four Volumes
 
   Studies In American Political History - 1896'
